# hunch

./: .gitignore  404.html  ACTION_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_V2.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES.md  SECURITY.md  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-09928b96.js  searchindex-151c5061.js  searchindex-1545d35c.js  searchindex-177f80de.js  searchindex-23e96f49.js  searchindex-31dcd877.js  searchindex-32127058.js  searchindex-5cc25b36.js  searchindex-8430e0eb.js  searchindex-a037c74a.js  searchindex-abd6dd68.js  searchindex-ba2f4f1f.js  searchindex-c2279305.js  toc-168c2c66.js  toc-54a5f23b.js  toc-736678f7.js  toc-8a688177.js  toc-d3f9349e.js  toc-e3665db2.js  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  failed_parse.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  fuzz.yml  mutants.yml  release.yml
.wibey/skills/rust-release/: SKILL.md
about/: changelog.html  contributing.html  design.html  migration-v2.html  security.html
benches/: parse.rs
contributor-guide/: coverage.html  fuzzing.html  mutation-baseline.html
dev/bench/: data.js
docs/: benchmarks.md  book.toml  compatibility.md  coverage.md  design.md  fuzzing.md  mutation-baseline.md  plan-52-53.md  public-api.md  public-api.txt  user_manual.md
docs/src/: SUMMARY.md  introduction.md
docs/src/about/: changelog.md  contributing.md  design.md  migration-v2.md  security.md
docs/src/contributor-guide/: coverage.md  fuzzing.md  mutation-baseline.md
docs/src/reference/: benchmark-dashboard.md  benchmarks.md  public-api.md  public-api.txt  release-trajectory.md
docs/src/user-guide/: compatibility.md  known-limitations.md  user-manual.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parse_filename/: anime_brackets  episode_sxxexx  long_dotted  movie_basic  multi_episode  path_with_dirs  unicode_title
fuzz/corpus/parse_with_context/: series_consistent  single_file
fuzz/fuzz_targets/: parse_filename.rs  parse_with_context.rs
reference/: benchmark-dashboard.html  benchmarks.html  public-api.html  public-api.txt  release-trajectory.html
rules/: anime_bonus.toml  audio_codec.toml  audio_profile.toml  color_depth.toml  container.toml  country.toml  edition.toml  episode_details.toml  episode_format.toml  frame_rate.toml  language.toml  other.toml  other_positional.toml  other_weak.toml  screen_size.toml  source.toml  streaming_service.toml  subtitle_language.toml  video_api.toml  video_codec.toml  video_profile.toml
src/: guess.rs  hunch_result.rs  lib.rs  main.rs  options.rs  pipeline.rs  priority.rs  tokenizer.rs  zone_map.rs
src/matcher/: engine.rs  mod.rs  regex_utils.rs  rule_loader.rs  span.rs
src/pipeline/: context.rs  invariance.rs  matching.rs  mod.rs  pass2_helpers.rs  proper_count.rs  rule_registry.rs  token_context.rs  zone_rules.rs
src/properties/: aspect_ratio.rs  audio_codec.rs  audio_profile.rs  bit_rate.rs  bonus.rs  color_depth.rs  container.rs  country.rs  crc32.rs  date.rs  edition.rs  episode_count.rs  episode_details.rs  episode_patterns.rs  episodes.rs  frame_rate.rs  language.rs  mod.rs  other.rs  part.rs  release_group.rs  screen_size.rs  size.rs  source.rs  streaming_service.rs  subtitle_language.rs  title.rs  uuid.rs  version.rs  video_codec.rs  video_profile.rs  website.rs  year.rs
src/properties/episodes/: mod.rs  patterns.rs  tests.rs
src/properties/release_group/: known_tokens.rs  mod.rs  validation.rs
src/properties/title/: clean.rs  mod.rs  secondary.rs
src/properties/title/strategies/: after_bracket_group.rs  cjk_bracket.rs  mod.rs  parent_dir.rs  (+1 more)
src/rules/: anime_bonus.toml  audio_channels.toml  audio_codec.toml  language.toml  other.toml  screen_size.toml  source.toml  streaming_service.toml  video_codec.toml  video_profile.toml
tests/: bracket_leak.rs  cli_batch_warning.rs  cli_context_symlink_safety.rs  cli_walk_dir_safety.rs  context.rs  empty_intermediate.rs  fixture_parser.rs  generic_dir_filter.rs  guessit_regression.rs  inheritance_blocking_dirs.rs  integration.rs  issue_244_batch_recursive_extras.rs  issue_244_menu_case_insensitive.rs  issue_244_self_describing_filenames.rs  issue_244_title_with_inline_season.rs  issue_244_title_with_season.rs  matching_constraints.rs  parent_context.rs  ptn_corpus_review.rs  source_ancestor_path.rs  validate_guessit.py  wrong_type.rs
tests/fixtures/: ATTRIBUTION.md  community.yml  episodes.yml  movies.yml
tests/fixtures/rules/: video_codec.yml  website.yml
tests/helpers/: mod.rs
user-guide/: compatibility.html  known-limitations.html  user-manual.html
