[package]
name = "hunch"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Lijun Zhu"]
description = "A media filename parser for movies, TV, and anime — built in Rust, inspired by guessit"
license = "MIT"
repository = "https://github.com/lijunzh/hunch"
homepage = "https://github.com/lijunzh/hunch"
keywords = ["media", "parser", "filename", "movies", "episodes"]
categories = ["multimedia", "parser-implementations"]
readme = "README.md"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
log = "0.4"

# CLI-only deps (not pulled in when used as a library)
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = ["cli"]
cli = ["clap", "env_logger"]

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.7", features = ["html_reports"] }
assert_cmd = "2"
tempfile = "3"

[[bench]]
name = "parse"
harness = false

[[bin]]
name = "hunch"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "hunch"
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/hunch-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "hunch-{ target }/{ bin }{ binary-ext }"
